--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+}
