--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,26 @@ main {
   flex-wrap: wrap;
 }
 
+#header {
+  width: 100%;
+
+  margin: 0 0 8px 0;
+  padding: 4px 0 4px 8px;
+
+  background-color: rgba(255, 255, 255, 0.77);
+  color: #080808;
+}
+
+#footer {
+  width: 100%;
+
+  margin: 0 0 8px 0;
+  padding: 4px 0 4px 8px;
+
+  background-color: rgba(255, 255, 255, 0.77);
+  color: #080808;
+}
+
 .description {
   list-style-type: none;
 
