canvas外のUIをreactで描画する (#2)
* 操作説明の位置を変えた

* canvas以外の箇所はreactを使う

* reactの外から書き込める適当なstoreを定義

* canvas内でのスクロールを避ける

* キー操作でもスクロールしないようにしておく

* TODOコメント

* 数値表示をreact側へ持っていく

* ガクガクするので親の長さを決めておく

--- a/src/style.css
+++ b/src/style.css
@@ -20,17 +20,41 @@ body {
   justify-content: center;
 }
 
-.description {
-  position: fixed;
-  right: 0;
-  bottom: 0;
+main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 
+  width: 90%;
+}
+
+#header {
+  width: 100%;
+
+  margin: 0 0 8px 0;
+  padding: 4px 0 4px 8px;
+
+  background-color: rgba(255, 255, 255, 0.77);
+  color: #080808;
+}
+
+#footer {
+  width: 100%;
+
+  margin: 0 0 8px 0;
+  padding: 4px 0 4px 8px;
+
+  background-color: rgba(255, 255, 255, 0.77);
+  color: #080808;
+}
+
+.description {
   list-style-type: none;
 
-  margin: 16px;
+  margin: 0 0 8px 8px;
   padding: 8px;
   padding-left: 12px;
 
-  background-color:rgba(255, 255, 255, 0.77);
-  color: #080808
+  background-color: rgba(255, 255, 255, 0.77);
+  color: #080808;
 }
