--- a/src/style.css
+++ b/src/style.css
@@ -93,6 +93,10 @@ body {
 
 #canvas-overlay {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 15;
 }
 
 #sidebar-right {
