--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@ body {
 }
 
 #main {
-  min-height: 98dvh;
+  min-height: 97dvh;
 
   display: grid;
   gap: 0.2rem;
@@ -129,4 +129,17 @@ body {
 
 #footer {
   grid-area: footer;
+}
+
+#supersampling-overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  padding: calc(var(--spacing) * 2);
+  z-index: 999;
+
+  display: none;
 }
